<resources>
    <string name="app_name">DAM-Pokedex-Part1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_regions">Regions</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




    <string name="pk_generations">%1$d Generation</string>
    <string name="pk_id">#%1$d</string>



    <string name="menu_home">Home View</string>
    <string name="menu_pokedex">Pokedex</string>

    <string name="pokemons">Pokemons</string>
</resources>