<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_regions">

    <fragment
        android:id="@+id/nav_pokedex"
        android:name="com.isel.dam.tutorial3.dam_pokedex_part1.ui.pokedex.PokedexFragment"
        android:label="@string/menu_pokedex"
        tools:layout="@layout/fragment_pokedex">

    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.isel.dam.tutorial3.dam_pokedex_part1.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.isel.dam.tutorial3.dam_pokedex_part1.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_regions"
        android:name="com.isel.dam.tutorial3.dam_pokedex_part1.ui.region.RegionFragment"
        android:label="@string/menu_regions"
        tools:layout="@layout/fragment_region" >
        <action
            android:id="@+id/action_nav_regions_to_pokemonsFragment"
            app:destination="@id/nav_pokemons"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_pokemons"
        android:name="com.isel.dam.tutorial3.dam_pokedex_part1.ui.pokemon.PokemonsFragment"
        android:label="@string/pokemons"
        tools:layout="@layout/fragment_pokemons" />
</navigation>